created separate JS files for the programs

--- a/Printing numbers using loops/index.html
+++ b/Printing numbers using loops/index.html
@@ -8,18 +8,6 @@
   </head>
   <body>
     <h1>PRINTING NUMBERS FROM 1 TO 100 USING LOOPS</h1>
-    <script>
-      // HORIZONTALLY
-      for (let i = 1; i <= 100; i++) {
-        document.write(i + " ");
-      }
-
-      document.write("</br>");
-
-      // VERTICALLY
-      for (let i = 1; i <= 100; i++) {
-        document.write(i + "</br>");
-      }
-    </script>
+    <script src="index.js"></script>
   </body>
 </html>
