--- a/Even and Odd Numbers/index.html
+++ b/Even and Odd Numbers/index.html
@@ -9,16 +9,6 @@
   <body>
     <h1>Printing Even and Odd Numbers from 1 to 100</h1>
 
-    <script>
-      for (let i = 1; i <= 100; i++) {
-        if (i % 2 == 0) {
-          document.write(`${i} is an even number`);
-          document.write("</br>");
-        } else if (i % 2 !== 0) {
-          document.write(`${i} is an odd number`);
-          document.write("</br>");
-        }
-      }
-    </script>
+    <script src="index.js"></script>
   </body>
 </html>
